--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -116,6 +116,10 @@ SIDEBAR STUFFS
   font-size: .8rem;
 }
 
+.sidebar-list-heading {
+  margin: 0;
+}
+
 .categories-sidebar-list {
   background: white;
   padding: 7px;
